updated the veu project

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 
+# Created by https://www.toptal.com/developers/gitignore/api/less,vuejs
+# Edit at https://www.toptal.com/developers/gitignore?templates=less,vuejs
+
+### Less ###
+*.less
+
+### Vuejs ###
+# Recommended template: Node.gitignore
+
 node_modules/
 dist/
 npm-debug.log
 yarn-error.log
+
+# End of https://www.topta
